--- a/app/assets/stylesheets/users/courses.scss
+++ b/app/assets/stylesheets/users/courses.scss
@@ -36,3 +36,11 @@
   50% {transform: scale(1);}
   90% {top: 0;transform: scale(1.1,0.8);}
 }
+
+.course_image {
+
+}
+
+.course_table {
+  width: 60%;
+}
