--- a/app/assets/stylesheets/users/search.scss
+++ b/app/assets/stylesheets/users/search.scss
@@ -2,14 +2,25 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.container {
-	width: 100%;
-	display: flex;
-    flex-wrap: wrap;
+.search {
+	width: 85%;
+	margin: 0 auto;
+}
+
+.search strong {
+	color: #FF0033;
+	font-size: 30px;
 }
 
 .content_shop {
-    width: 85%;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.content_shop strong {
+	font-size: 30px;
+	color: red;
 }
 
 .name {
@@ -21,11 +32,32 @@
 
 .photo {
 	width: 40%;
-	margin-bottom: 20px;
+	margin-bottom: 7px;
 }
 
 .intro {
 	width: 56%;
 	overflow: hidden;
 	padding-left: 15px;
+}
+
+.plan {
+	margin-top: 26px;
+}
+
+.shop-course {
+	margin-top: 20px;
+}
+
+.course-plan {
+    font-size: 30px;
+}
+
+.course-name {
+	width: 48%;
+    padding: 30px;
+    border: 5px solid #EDFFBE;
+    margin: 10px;
+    display: flex;
+    flex-wrap: wrap;
 }
