--- a/app/views/users/courses/show.html.erb
+++ b/app/views/users/courses/show.html.erb
@@ -6,18 +6,28 @@
 
 <% end %>
 
-<h1>コース詳細</h1>
-<p><%= @course.name %></p>
-<p><%= @course.people_number %></p>
-<p>最大予約人数</p>
-<p><%= @course.maximum_people %></p>
-<p>最低予約人数</p>
-<p><%= @course.minimum_people %></p>
-<p>価格</p>
-<p><%= @course.price %></p>
-<span><%= link_to "オーダーへ", users_orders_path %></span><br>
-<span><%= link_to "お店一覧", users_shops_path%></span><br>
-<span><%= link_to "コース一覧", users_courses_path(shop_id: params[:shop_id])%></span>
+<div class="container">
+	<div class="row">
+		<div class="course_image col-md-4">
+	       <%= attachment_image_tag @course, :course_image, :fill, 200, 150, format: 'jpeg', class: "img-rounded pull-left profile-img", fallback: "no_image.jpg", :size =>'200x200' %>	
+	    </div>
+		<table class="table course_table col-md-7">
+			<tr>
+				<th>コース詳細</th>
+				<td><%= @course.name %>  <%= @course.people_number %></td>
+				<th>最大予約人数</th>
+				<td><%= @course.maximum_people %></td>
+				<th>最低予約人数</th>
+				<td><%= @course.minimum_people %></td>
+				<th>価格</th>
+				<td><%= @course.price %> / 人</td>
+			</tr>
+		</table>
+	</div>
+</div>
+	<span><%= link_to "オーダーへ", users_orders_path %></span><br>
+	<span><%= link_to "お店一覧", users_shops_path%></span><br>
+	<span><%= link_to "コース一覧", users_courses_path(shop_id: params[:shop_id])%></span>
 
 
 <%= render 'users/orders/select_course', course: @course, order: @order, shop: @shop, reserve_time: @reserve_time %>
