searchレイアウトOK

--- a/app/views/users/courses/show.html.erb
+++ b/app/views/users/courses/show.html.erb
@@ -13,6 +13,8 @@
 	    </div>
 		<table class="table course_table col-md-7">
 			<tr>
+				<th>コース説明</th>
+				<th><%= @ %></th>
 				<th>コース詳細</th>
 				<td><%= @course.name %>  <%= @course.people_number %></td>
 				<th>最大予約人数</th>
