--- a/app/views/users/shops/index.html.erb
+++ b/app/views/users/shops/index.html.erb
@@ -1,10 +1,5 @@
-<h1>お店一覧</h1>
-
-<td style="border-style: none;">・<%= link_to "評価トップ５", users_shops_path(:place => "top5"), class: "genre_text"; %></td>
-<td style="border-style: none;">・<%= link_to "お気に入りトップ５", users_shops_path(:place => "favo5"), class: "genre_text"; %></td>
-
-
-<div class="containar">
+<h1 class="page-title">お店一覧</h1>
+<div class="containar shops-all">
   <div class="row">
     <div class="col-md-10 offset-md-1">
       <div class="row">
@@ -22,44 +17,75 @@
                 <td style="border-style: none;">・<%= link_to "すべて", users_shops_path, class: "genre_text"; %></td>
               </tr>
               <tr>
-                <td style="border-style: none;">・<%= link_to "トップ５", users_shops_path(:place => "top5"), class: "genre_text"; %></td>
+                <td style="border-style: none;">・<%= link_to "口コミ TOP５", users_shops_path(:place => "top5"), class: "genre_text"; %></td>
               </tr>
               <tr>
-                <% @shopgenres.each do |genre| %>
+                <td style="border-style: none;">・<%= link_to "お気に入り TOP５", users_shops_path(:place => "favo5"), class: "genre_text"; %></td>
+              </tr>
+              <% @shopgenres.each do |genre| %>
+                <tr>
                   <td style="border-style: none;">
                     <%= link_to users_shops_path(shopgenre_id: genre.id) do %>
                       <span class="genre_text" >・<%= genre.name %></span>
                     <% end %>
                   </td>
-              </tr>
+                </tr>
               <% end %>
             </tbody>
           </table>
         </article>
         <div class="col-md-10">
-          <div clas="shop-list-box">
-            <% @shops.each do |shop| %>
-              <p>----------</p>
-              <div id="star-rate-<%= shop.id %>"></div>
-              <span><%= link_to shop.name , "/users/shops/#{shop.id}" %></span>
-              <span><%= shop.shop_image_id %></span><br>
-              <div>
-                  お気に入り数：<%= shop.favorites.count %>
-              </div>
-              <script>
-                  $('#star-rate-<%= shop.id %>').raty({
-                    size: 36,
-                    starOff:  '<%= asset_path('star-off.png') %>',
-                    starOn : '<%= asset_path('star-on.png') %>',
-                    starHalf: '<%= asset_path('star-half.png') %>',
-                    half: true,
-                    readOnly: true,
-                    score: '<%= shop.reviews.average(:star).to_f.round(1) %>',
-                  });
-              </script>
+          <div clas="shop-box">
+            <% if request.fullpath.include?("top5") || request.fullpath.include?("favo5") %>
+              <% @shops.each.with_index(1) do |shop, i| %>
+                <div class="shop-content">
+                  <h1>第  <%= i %> 位</h1>
+                  <div><%= link_to shop.name , "/users/shops/#{shop.id}" %></div>
+                  <span><%= attachment_image_tag shop, :shop_image, format: 'jpeg', class: "img-rounded pull-left profile-img item_img img_hover ", fallback: "no_image.jpg" %></span><br>
+                  <a id="star-rate-<%= shop.id %>"></a><span class="review-ave"><%= shop.reviews.average(:star).to_f.round(2) %></span><i class="fas fa-comment-dots comeicon"></i> <a><%= shop.reviews.count %>件</a>
+                  <div>
+                    <i class="fas fa-heart"></i><a class="favocount"><%= shop.favorites.count %></a>件
+                  </div>
+                  <script>
+                      $('#star-rate-<%= shop.id %>').raty({
+                        size: 36,
+                        starOff:  '<%= asset_path('star-off.png') %>',
+                        starOn : '<%= asset_path('star-on.png') %>',
+                        starHalf: '<%= asset_path('star-half.png') %>',
+                        half: true,
+                        readOnly: true,
+                        score: '<%= shop.reviews.average(:star).to_f.round(1) %>',
+                      });
+                  </script>
+                </div>
+              <% end %>
+            <% else %>
+              <% @shops.each do |shop| %>
+                <div class="shop-content">
+                  <div><%= link_to shop.name , "/users/shops/#{shop.id}" %></div>
+                  <span><%= attachment_image_tag shop, :shop_image, format: 'jpeg', class: "img-rounded pull-left profile-img item_img img_hover ", fallback: "no_image.jpg" %></span><br>
+                  <a id="star-rate-<%= shop.id %>"></a><span class="review-ave"><%= shop.reviews.average(:star).to_f.round(2) %></span><i class="fas fa-comment-dots comeicon"></i> <a><%= shop.reviews.count %>件</a>
+                  <div>
+                    <i class="fas fa-heart"></i><a class="favocount"><%= shop.favorites.count %></a>件
+                  </div>
+                  <script>
+                      $('#star-rate-<%= shop.id %>').raty({
+                        size: 36,
+                        starOff:  '<%= asset_path('star-off.png') %>',
+                        starOn : '<%= asset_path('star-on.png') %>',
+                        starHalf: '<%= asset_path('star-half.png') %>',
+                        half: true,
+                        readOnly: true,
+                        score: '<%= shop.reviews.average(:star).to_f.round(1) %>',
+                      });
+                  </script>
+                </div>
+              <% end %>
+              <div class="shop-page"><%= paginate @shops, class: "pagination" %></div>
             <% end %>
           </div>
         </div>
+        
       </div>
     </div>
   </div>
