--- a/app/assets/stylesheets/users/favorites.scss
+++ b/app/assets/stylesheets/users/favorites.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the users/favorites controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.favorite-all {
+	width: 100%;
+}
+
+.favorite-sub {
+	width: 90%;
+	display: flex;
+    justify-content: space-around;
+    margin: 0 auto;
+}
+
+.myfavorite {
+    width: 30%;
+    border: 5px solid #EDFFBE;
+}
