--- a/app/assets/stylesheets/users/orders.scss
+++ b/app/assets/stylesheets/users/orders.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the users/orders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.select-select {
+	margin-top: 100px;
+}
+
+.oder-select {
+	margin-bottom: 20px;
+}
+
+.course-confirm {
+	margin-top: 95px;
+}
