--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   </head>
 
   <body>
+    <div class="wrap">
     <header>
       <div class="head-all">
         <div class="head-image">
@@ -89,5 +90,6 @@
 
       </div>
     </footer>
+    </div>
   </body>
 </html>
