--- a/app/assets/stylesheets/users/favorites.scss
+++ b/app/assets/stylesheets/users/favorites.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the users/favorites controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.shop_name {
+  font-size: 200%;
+}
